gcc/testsuite/rust/rustc/ui/proc-macro/issue-118455-skip-err-builtin_dg.rs
#![some_nonexistent_attribute]
// { dg-error "" "" { target *-*-* } .-1 }
#[derive(Debug)]
pub struct SomeUserCode;

fn main() {}

